--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,10 +2,9 @@ version: "3.9"
 
 services:
   nextapp:
-    build: .
-    container_name: next-static
+    image: finriustech/nexttest:latest  
     ports:
       - "8000:80"
     environment:
-      - API_URL=https://api.production.com
+      - API_URL=https://api.next.static.com
       - NODE_ENV=production
