--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -146,7 +146,10 @@ jobs:
           echo "❌ SSH not ready"
           exit 1
 
-
+      - name: Debug – Locate ansible.cfg
+        run: |
+          echo "Searching for ansible.cfg..."
+          find /tmp/infra -maxdepth 4 -type f -name "ansible.cfg"
       # ---------------------------------------------------------
       # RUN ANSIBLE PLAYBOOK (uses ansible.cfg inside role)
       # ---------------------------------------------------------
